# dotfiles

./: .gitmodules  .pam_environment  .profile  .zshrc  README.md  install_system.sh  tracked_folders
.config/: Trolltech.conf  brave-flags.conf  redshift.conf
.config/OpenTabletDriver/: settings.json
.config/environment.d/: env.conf
.config/fcitx/: profile
.config/fish/: config.fish  fish_variables
.config/gtk-3.0/: bookmarks  settings.ini
.config/guake/: guake_prefs  session.json
.config/i3/: config
.config/mako/: config
.config/picom/: picom.conf
.config/polybar/: config  launch.sh
.config/qt5ct/: qt5ct.conf
.config/sway/: config  screenshot.sh  vid_region.sh
.config/swaylock/: config
.config/taffybar/: my-taffybar.cabal  taffybar.css  taffybar.hs
.config/waybar/: config  error.txt  launch.sh  log.txt  stopwatch.sh  style.css  system-bluetooth-bluetoothctl.py  system-bluetooth-bluetoothctl.sh  wg-status.sh
.config/xdg-desktop-portal-wlr/: config
.config/yadm/: bootstrap  encrypt
.installation_script/: autologin.sh  caps_hjkl.sh  cronie.sh  docker.sh  emacs.sh  fish.sh  fonts.sh  git.sh  guake.sh  hygen.sh  internet_fix.sh  lightdm.sh  linux_zen.sh  multilib.sh  systemd.sh  util.sh  xorg.sh  zsh.sh
.pythonbin/: get_current_screen_geometry
.xmonad/: xmobar.hi  xmonad.hs
.xmonad/lib/: Keys.hs  (+1 more)
.zsh-scripts/: android.zsh  atlassian.zsh  clipboard.zsh  colorpicker.zsh  cuda.zsh  docs.zsh  dotnet.zsh  edit-command-line.zsh  file-manipulation.zsh  hygen.zsh  pacman.zsh  peco.zsh  repo-sync.zsh  ruby.zsh  video.zsh  wgcf.zsh  youtube.zsh
(+63 files in other folders)
