name:                my-taffybar
version:             0.1.0.0
author:              author
maintainer:          email@email.com
build-type:          Simple
cabal-version:       >=1.10

executable taffybar
  hs-source-dirs:      .,lib
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-prof-options: -fprof-auto
  build-depends:       base
                     , X11
                     , bytestring
                     , coinbase-pro
                     , containers
                     , directory
                     , filepath
                     , gi-gtk
                     , gi-gdk
                     , simple-cmd
                     , gtk-sni-tray
                     , gtk-strut
                     , haskell-gi-base
                     , hostname
                     , hslogger
                     , process
                     , split
                     , text
                     , time
                     , taffybar>=3.2.0
                     , transformers
                     , xdg-basedir
  default-language:    Haskell2010